fix for search alignment (#421)
* fix for search alignment

--- a/src/app/search/search.component.scss
+++ b/src/app/search/search.component.scss
@@ -142,3 +142,15 @@
   flex-wrap: wrap;
   justify-content: space-between;
 }
+
+.search-facet-holder {
+  display: flex;
+}
+
+.search-facet-left {
+  justify-content: flex-start;
+}
+
+.search-facet-right {
+  justify-content: flex-end;
+}
